[package]
name = "sjson"
version = "0.1.0"
edition = "2021"
authors = ["naiba <hi@nai.ba>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/naiba/sjson.rs"
documentation = "https://docs.rs/sjson/"
description = "Set JSON values quickly"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
